--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
+  jobs:
+      build:
     working_directory: ~/repo
     steps:
       - checkout
