--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,11 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
-  jobs:
-      build:
+  deploy-job:
+    docker:
+      - image: <docker-image-name-tag>
     working_directory: ~/repo
     steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only hosting
+      - run:
+          name: Deploy Master to Firebase
+          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN --only hosting
