--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,10 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
+  jobs:
+    build:
+     docker:
+            - image: circleci/node:10.16.0
   deploy-job:
     docker:
       - image: <docker-image-name-tag>
