--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,27 @@
-version: 2.1
-orbs:
-  node: circleci/node@1.1.6
-  jobs:
+
+version: 2
+jobs:
     build:
-     docker:
+        docker:
             - image: circleci/node:10.16.0
-  deploy-job:
-    docker:
-      - image: <docker-image-name-tag>
-    working_directory: ~/repo
-    steps:
-      - run:
-          name: Deploy Master to Firebase
-          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN --only hosting
+        working_directory: ~/repo
+        steps:
+            - checkout
+            # Download and cache dependencies
+            - restore_cache:
+                  keys:
+                      - v1-dependencies-{{ checksum "package.json" }}
+                      - v1-dependencies-
+            - run:
+                  name: Install Dependencies
+                  command: npm install
+            - save_cache:
+                  key: v1-npm-deps-{{ checksum "package-lock.json" }}
+                  paths:
+                      - ./node_modules
+            - run:
+                  name: Build
+                  command: npm build
+            - run:
+                  name: Firebase Deploy
+                  command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only hosting
